BuildHughes/translation-tool/inputs/source_meta/objects/Offer_GeographyBlocked__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <referenceTo>Geography__c</referenceTo>
        <relationshipLabel>Offer-GeographyBlockeds</relationshipLabel>
        <relationshipName>Offer_GeographyBlockeds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <label>Offer</label>
        <referenceTo>Offers__c</referenceTo>
        <relationshipLabel>Offer-GeographyBlockeds</relationshipLabel>
        <relationshipName>Offer_GeographyBlockeds</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Offer-GeographyBlocked</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OffeGeoBloc-{0000000000}</displayFormat>
        <label>Offer-Geography Available Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offer-GeographyBlockeds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>